# technopark_cpp

./: .gitignore  .travis.yml  README.md
pt_1/: CMakeLists.txt  filter.c  filter.h  header.h  in1.txt  list.c  list.h  main.c  read.c  read.h  test.c
pt_2/: .travis.yml  CMakeLists.txt  list_of_stress_files.txt  main.c  run_stress.sh
pt_2/pt_2_shared/: CMakeLists.txt
pt_2/pt_2_shared/include/: count.h  error_handler.h  header.h  read.h
pt_2/pt_2_shared/src/: count.c  error_handler.c  read.c
pt_2/pt_2_shared/unit_test/: test.c
pt_2/pt_2_static/: CMakeLists.txt
pt_2/pt_2_static/include/: count.h  error_handler.h  header.h  read.h
pt_2/pt_2_static/src/: count.c  error_handler.c  read.c
pt_2/pt_2_static/unit_test/: CMakeLists.txt  test.c
pt_2/stress_test_files/: 10.txt  100.txt  1000.txt  10000.txt  100000.txt
pt_2/test_files/: correct_file.txt  fscanf_mark.txt  fscanf_number_of_comments.txt  fscanf_voices.txt  invalid_voices.txt
pt_2_shared/: CMakeLists.txt
pt_2_shared/include/: count.h  header.h  read.h
pt_2_shared/src/: count.c  read.c
pt_2_shared/unit_test/: CMakeLists.txt  test.c
pt_2_static/: CMakeLists.txt
pt_2_static/include/: count.h  header.h  read.h
pt_2_static/src/: read.c
pt_2_static/unit_test/: test.c
test_files/: fscanf_id.txt  incorrect_number_of_comments.txt  invalid_mark.txt  not_positive_number_of_comments.txt
